Build endpoint
