# src/openapi_server/models/__init__.py
@@ -3,6 +3,9 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from openapi_server.models.new_samples import NewSamples
+from openapi_server.models.sample import Sample
+from openapi_server.models.samples import Samples
 from openapi_server.models.search_query import SearchQuery
 from openapi_server.models.search_result import SearchResult
 from openapi_server.models.search_results import SearchResults
