# src/openapi_server/models/new_samples.py
@@ -1,0 +1,90 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server import util
+
+
+class NewSamples(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, path_to_file_list=None, sample_names=None):  # noqa: E501
+        """NewSamples - a model defined in OpenAPI
+
+        :param path_to_file_list: The path_to_file_list of this NewSamples.  # noqa: E501
+        :type path_to_file_list: str
+        :param sample_names: The sample_names of this NewSamples.  # noqa: E501
+        :type sample_names: List[str]
+        """
+        self.openapi_types = {
+            'path_to_file_list': str,
+            'sample_names': List[str]
+        }
+
+        self.attribute_map = {
+            'path_to_file_list': 'path_to_file_list',
+            'sample_names': 'sample_names'
+        }
+
+        self._path_to_file_list = path_to_file_list
+        self._sample_names = sample_names
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'NewSamples':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The NewSamples of this NewSamples.  # noqa: E501
+        :rtype: NewSamples
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def path_to_file_list(self):
+        """Gets the path_to_file_list of this NewSamples.
+
+
+        :return: The path_to_file_list of this NewSamples.
+        :rtype: str
+        """
+        return self._path_to_file_list
+
+    @path_to_file_list.setter
+    def path_to_file_list(self, path_to_file_list):
+        """Sets the path_to_file_list of this NewSamples.
+
+
+        :param path_to_file_list: The path_to_file_list of this NewSamples.
+        :type path_to_file_list: str
+        """
+
+        self._path_to_file_list = path_to_file_list
+
+    @property
+    def sample_names(self):
+        """Gets the sample_names of this NewSamples.
+
+
+        :return: The sample_names of this NewSamples.
+        :rtype: List[str]
+        """
+        return self._sample_names
+
+    @sample_names.setter
+    def sample_names(self, sample_names):
+        """Sets the sample_names of this NewSamples.
+
+
+        :param sample_names: The sample_names of this NewSamples.
+        :type sample_names: List[str]
+        """
+
+        self._sample_names = sample_names
